crates/vouched/tests/ui/vouched/impls_try_from_borrowed_str_mixed_sources.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(len(1..=8), impls(try_from(&str, i64)))]
struct MixedBorrowedStrAndInteger(String);

fn main() {}
